--- a/src/app/about-page/about-page.component.html
+++ b/src/app/about-page/about-page.component.html
@@ -1,1 +1,12 @@
-<p>about-page works!</p>
+<div class="about-section">
+    <p class="para">Hi to all, who are confused about how this app is going to work and what even this app does, let me explain. This app is called "PageTurnPerks" and just as the name suggests, you can get perks (gifts) for every page you turn. This app is designed to help you set goals, look at your progress and also set how you will treat yourself on the successful completion of your goal.</p>
+
+    <p class="para">Go to settings page, add a challenge. Set your perks that you want to gift yourself at the successful completion of challenge. You can also set multiple gifts at a time and the app will randomly choose one as your gift. You will not know what your gift is until you have completed your challenge successfully. Now every day after studying book, you can mark your day, you can continue this until you finish your goal. Keep in mind, if you miss one day, the progress will start again from 1st day.</p>
+    
+    <p class="para">I hope this app helps you. I am a self-disciplined wanna be, and this app is slightly helping me get there, by being able to gift me and see the progress!</p>
+    
+    <p style="color: #f69110;;text-align: right;">
+        K Loknath Kumar Mishra,<br>
+        Founder & CTO, PageTurnPerks.
+    </p>
+</div>
