--- a/src/app/help-page/help-page.component.html
+++ b/src/app/help-page/help-page.component.html
@@ -1,1 +1,21 @@
-<p>help-page works!</p>
+<p class="para">For any queries, reporting bugs, appreciations or criticism, contact me
+    at +919360207800 or mail me at loknath12502@gmail.com
+</p>
+<p class="para">
+    Thank you for supporting me! If you have any more ideas for
+    app like this, please ping me.
+</p>
+<div class="social-links">
+    <div class="social-link">
+        <img class="social-icon" src="/assets/whatsapp-icon.png" alt="whatsappIcon">
+        <a href="//wa.me/+919360207800">Whatsapp</a>
+    </div>
+    <div class="social-link">
+        <img class="social-icon" src="/assets/linkedin-icon.png" alt="whatsappIcon">
+        <a href="//www.linkedin.com/in/loknath-kumar-mishra/">Linkedin Profile</a>
+    </div>
+    <div class="social-link">
+        <img class="social-icon" src="/assets/email-icon.png" alt="whatsappIcon">
+        <a href="mailto:loknath12502@gmail.com">Mail me!</a>
+    </div>
+</div>
