--- a/src/app/settings-page/settings-page.component.css
+++ b/src/app/settings-page/settings-page.component.css
@@ -33,6 +33,11 @@
     line-height: 30px;
 }
 
+.information{
+    color: red;
+    text-align: center;
+}
+
 .para-2{
     padding: 15px;
     text-align: center;
